xp-maven-plugin (3.2.0)

  * Use bug-free Windows runners (https://github.com/xp-framework/xp-runners/pull/7)
  * Add "xp:apidoc" goal to generate and pack project API documentation
  * Add "xp:ignite" goal to setup local workspace
  * Add "xp:source" goal to pack project sources
  * Unify forked/non-forked custom goals (xp:run/xp:run-no-fork and xp:source and xp:source-no-fork)
  * Remove the "run" lifecycle as "xp:run" now forks the "xar" lifecycle
  * Add ${xp.source.skip} to skip source packing
  * Add ${xp.deploy.skip} to skip deploying to SVN
  * Refactor "xp:svn-deploy" and "xp:svn-deploy-no-fork"

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Fri, 15 Nov 2012


xp-maven-plugin (3.1.8)

  * Refactor plexus Logger by adding the LogLogger wrapper class
  * Fix "Class 'java.util.List' cannot be instantiated" in Maven2

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 08 Nov 2012


xp-maven-plugin (3.1.7)

  * Fix plexus Logger not-set issue -> NullPointerException

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Wed, 07 Nov 2012

xp-maven-plugin (3.1.6)

  * move all operation from phase "validate" to phase "initialize"
  * use new XP-Runners
  * update project name to "XP-Framework Maven plugin"
  * include on-the-fly generated "META-INF/manifest.ini" in output artifact
  * use org.codehaus.plexus.archiver.Archiver.addFileSet() instead of the deprecated addDirectory()
  * update examples in "examples" directory
  * application directories (webapp, config, xsl) now copied to ${outputDirectory} during the "compile" phase
  * change default unittest ini files location to 'src/test/config/unittest'
  * move pth files handling to its own class
  * refactor "package" and "test-package" phases
  * refactor runners location; add "svn" runner
  * add "svn-deploy" goal

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Fri, 19 Oct 2012

xp-maven-plugin (3.1.5)

  * use Maven output when displaying unittest results
  * remove ${xp.package.format} and replace it with ${project.packaging}