@@ -15,17 +15,21 @@
   <dependencies>
     <dependency>
       <groupId>net.xp-framework</groupId>
-      <artifactId>pom</artifactId>
+      <artifactId>core</artifactId>
       <version>5.8.7</version>
-      <type>pom</type>
-      <scope>import</scope>
+      <type>xar</type>
+   </dependency>
+    <dependency>
+      <groupId>net.xp-framework</groupId>
+      <artifactId>tools</artifactId>
+      <version>5.8.7</version>
+      <type>xar</type>
    </dependency>
    <dependency>
      <groupId>net.xp-framework</groupId>
      <artifactId>compiler</artifactId>
      <version>5.8.7</version>
      <type>xar</type>
-     <scope>compile</scope>
    </dependency>
     <dependency>
       <groupId>org.company.lib</groupId>
@@ -41,7 +45,7 @@
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
         <artifactId>xp-maven-plugin</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.2.1-SNAPSHOT</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
