@@ -10,6 +10,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.FileNotFoundException;
 import java.util.List;
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.ArrayList;
 
@@ -26,6 +27,10 @@ import net.xp_forge.maven.plugins.xp.util.ExecuteUtils;
 import net.xp_forge.maven.plugins.xp.util.ArchiveUtils;
 import net.xp_forge.maven.plugins.xp.io.IniFile;
 import net.xp_forge.maven.plugins.xp.logging.LogLogger;
+import net.xp_forge.maven.plugins.xp.exec.RunnerOutput;
+import net.xp_forge.maven.plugins.xp.exec.RunnerException;
+import net.xp_forge.maven.plugins.xp.exec.runners.php.PhpRunner;
+import net.xp_forge.maven.plugins.xp.exec.input.php.PhpRunnerInput;
 
 import static net.xp_forge.maven.plugins.xp.AbstractXpMojo.*;
 
@@ -65,13 +70,17 @@ public class InitializeMojo extends AbstractXpMojo {
       this.setupRuntimeFromDependencies(new File(this.outputDirectory, ".runtime"));
     }
 
-    getLog().info("Runners  [" + this.runnersDirectory + "]");
-    this.project.getProperties().put("xp.runtime.runners.directory", this.runnersDirectory.getAbsolutePath());
+    getLog().info("XP Runners [" + this.runnersDirectory + "]");
+    this.project.getProperties().setProperty("xp.runtime.runners", this.runnersDirectory.getAbsolutePath());
 
-    getLog().info("USE_XP   [" + (null == this.use_xp ? "N/A" : this.use_xp) + "]");
+    getLog().info("USE_XP     [" + (null == this.use_xp ? "N/A" : this.use_xp) + "]");
     if (null != this.use_xp) {
-      this.project.getProperties().put("xp.runtime.use_xp", this.use_xp);
+      this.project.getProperties().setProperty("xp.runtime.use_xp", this.use_xp);
     }
+
+    getLog().info("PHP path   [" + this.php + "]");
+    getLog().info("Timezone   [" + this.timezone + "]");
+    getLog().info("Extensions [" + (null == this.extensions ? "N/A" : this.extensions.toString()) + "]");
 
     // Alter default Maven settings
     this.alterSourceDirectories();
@@ -250,6 +259,11 @@ public class InitializeMojo extends AbstractXpMojo {
     this.setupTimezone();
     ini.setProperty("runtime", "date.timezone", this.timezone);
 
+    this.setupExtensions();
+    if (null != this.extensions) {
+      ini.setProperty("runtime", "extension", this.extensions);
+    }
+
     // Dump ini file
     File iniFile= new File(targetDirectory, "xp.ini");
     try {
@@ -287,7 +301,7 @@ public class InitializeMojo extends AbstractXpMojo {
 
     // Update ${xp.runtime.php} property
     getLog().debug(" - Using PHP from [" + this.php.getAbsolutePath() + "]");
-    this.project.getProperties().put("xp.runtime.php", this.php.getAbsolutePath());
+    this.project.getProperties().setProperty("xp.runtime.php", this.php.getAbsolutePath());
   }
 
   /**
@@ -311,7 +325,130 @@ public class InitializeMojo extends AbstractXpMojo {
 
     // Update ${xp.runtime.timezone} property
     getLog().debug(" - Using timezone [" + this.timezone + "]");
-    this.project.getProperties().put("xp.runtime.timezone", this.timezone);
+    this.project.getProperties().setProperty("xp.runtime.timezone", this.timezone);
+  }
+
+  /**
+   * Setup PHP extensions to load
+   *
+   * @return void
+   * @throws org.apache.maven.plugin.MojoExecutionException
+   */
+  private void setupExtensions() throws MojoExecutionException {
+    getLog().debug("Identifying PHP extensions");
+
+    // No extenions needed
+    if (null == this.extensions || this.extensions.isEmpty()) {
+      getLog().debug(" - No required extensions");
+      this.extensions= null;
+      return;
+    }
+
+    // Get list of loaded extensions
+    List<String> loadedExtensions= this.getLoadedPhpExtensions();
+    getLog().debug(" - Loaded extensions:" + loadedExtensions.toString());
+
+    // Get list of available extensions
+    List<String> availableExtensions= this.getAvailablePhpExtensions();
+    getLog().debug(" - Available extensions:" + availableExtensions.toString());
+
+    // Identify extensions to load
+    List<String> extensionsToLoad= new ArrayList<String>();
+    for (String extension: this.extensions) {
+
+      // Check already loaded; nothing to do
+      if (loadedExtensions.contains(extension)) continue;
+
+      // Check extension is not available
+      if (!availableExtensions.contains(extension)) {
+        getLog().warn("Required PHP extension [" + extension + "] could not be loaded; ignored");
+        continue;
+      }
+
+      // Add to list
+      extensionsToLoad.add(extension);
+    }
+
+    // Overwrite value
+    this.extensions= extensionsToLoad.isEmpty() ? null : extensionsToLoad;
+  }
+
+  /**
+   * Get list of already loaded PHP extensions
+   *
+   * @return java.util.List<java.lang.String>
+   * @throws org.apache.maven.plugin.MojoExecutionException
+   */
+  private List<String> getLoadedPhpExtensions() throws MojoExecutionException {
+
+    // Setup runner
+    PhpRunnerInput input= new PhpRunnerInput();
+    input.code= "foreach (get_loaded_extensions() as $ext) echo $ext.\"\\n\"";
+
+    PhpRunner runner= new PhpRunner(this.php, input);
+    runner.setLog(getLog());
+
+    // Execute runner
+    try {
+      runner.execute();
+    } catch (RunnerException ex) {
+      throw new MojoExecutionException("Execution of [php] runner failed: " + runner.getOutput().asString(), ex);
+    }
+
+    // Return runner output
+    return Arrays.asList(runner.getOutput().asString().trim().split("\n"));
+  }
+
+  /**
+   * Get list of available PHP extensions
+   *
+   * @return java.util.List<java.lang.String>
+   * @throws org.apache.maven.plugin.MojoExecutionException
+   */
+  private List<String> getAvailablePhpExtensions() throws MojoExecutionException {
+
+    // Setup runner
+    PhpRunnerInput input= new PhpRunnerInput();
+    input.code= "echo ini_get('extension_dir')";
+
+    PhpRunner runner= new PhpRunner(this.php, input);
+    runner.setLog(getLog());
+
+    // Execute runner
+    try {
+      runner.execute();
+    } catch (RunnerException ex) {
+      throw new MojoExecutionException("Execution of [php] runner failed: " + runner.getOutput().asString(), ex);
+    }
+
+    // Get extensions directory
+    File extensionsDirectory= new File(runner.getOutput().asString().trim());
+    getLog().debug(" - PHP extensions directory [" + extensionsDirectory + "]");
+    if (!extensionsDirectory.exists() || !extensionsDirectory.isDirectory()) {
+      throw new MojoExecutionException("Invalid PHP extensions directory [" + extensionsDirectory +"]");
+    }
+
+    // List directory contents
+    File[] entries= extensionsDirectory.listFiles();
+    if (null == entries) {
+      throw new MojoExecutionException("Failed to list contents of directory [" + extensionsDirectory + "]");
+    }
+
+    List<String> retVal= new ArrayList<String>();
+    for (File entry : entries) {
+      String entryName= entry.getName();
+
+      // Remove starting and trailing bits
+      if (entryName.startsWith("php_")) entryName= entryName.substring(4);
+      if (entryName.endsWith(".dll"))   entryName= entryName.substring(0, entryName.length() - 4);
+      if (entryName.endsWith(".so"))    entryName= entryName.substring(0, entryName.length() - 3);
+
+      // Add to list
+      retVal.add(entryName.toLowerCase());
+    }
+
+    // Return list of found extensions
+    return retVal;
   }
 
   /**
